--- a/Galerie.html
+++ b/Galerie.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="galerie.css">
     <link rel="shortcut icon" href="Sports.ico" type="image/x-con">
-    <title>Document</title>
+    <title>Galerie</title>
 </head>
 <body>
  <div class="header">
