--- a/AboutMe.html
+++ b/AboutMe.html
@@ -33,7 +33,7 @@
         <ul class="intro">
             <li class="abc">18 let</li>
             <li class="abc">Studentka druhého ročníku na škole SPŠE Havířov</li>
-            <li class="abc">Beta-testovuju</li>
+            <li class="abc">Beta-testuju</li>
             <li class="abc">Píšu manuály pro IMI CCI firmu</li>
             <li class="abc">Programuju v jazyce C</li>
             <li class="abc">Plynule umím mluvit anglicky</li>
